--- a/drink.html
+++ b/drink.html
@@ -5,179 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sosis Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-      margin: 0;
-      padding: 0;
-    }
-    .navbar {
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-      color: #fff;
-      font-weight: 500;
-      letter-spacing: 1px;
-    }
-    .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.15);
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-      display: block;
-      margin-top: 0;
-    }
-    .dropdown-menu {
-      display: none;
-      transition: all 0.3s ease-in-out;
-      background-color: rgba(0, 0, 0, 0.5);
-      border: none;
-    }
-    .dropdown-item {
-      color: white;
-    }
-    .dropdown-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      color: white;
-    }
-    .hero-image {
-      width: 100%;
-      max-height: 400px;
-      object-fit: cover;
-      filter: brightness(0.85);
-      box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-    }
-    .content {
-      padding: 2rem 0;
-    }
-    .section-title {
-      font-size: 2.3rem;
-      font-weight: 700;
-      color: #2c3e50;
-      margin-bottom: 1.2rem;
-      text-align: center;
-      letter-spacing: 2px;
-    }
-    .sosis-list li {
-      margin-bottom: 0.8rem;
-      font-size: 1.13rem;
-    }
-    .fun-fact {
-      background: #fffbe7;
-      padding: 18px 20px;
-      border-radius: 10px;
-      font-style: italic;
-      margin: 2rem 0;
-      font-size: 1.1rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-    }
-    .img-sosis {
-      width: 100%;
-      max-width: 600px;
-      height: auto;
-      display: block;
-      margin: 35px auto 10px auto;
-      border-radius: 15px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-      transition: transform 0.3s;
-    }
-    .img-sosis:hover {
-      transform: scale(1.04);
-    }
-    .gallery-title {
-      font-weight: 600;
-      color: #34495e;
-      margin-top: 2.5rem;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-    .gallery {
-      display: flex;
-      gap: 18px;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-bottom: 2.5rem;
-    }
-    .gallery-item {
-      position: relative;
-      overflow: hidden;
-      border-radius: 10px;
-    }
-    .gallery-item img {
-      width: 170px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 10px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .gallery-item:hover img {
-      transform: scale(1.07);
-      box-shadow: 0 4px 18px rgba(0,0,0,0.15);
-    }
-    .btn-below {
-      display: block;
-      margin-top: 8px;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 6px 12px;
-      border-radius: 6px;
-      font-size: 0.9rem;
-      font-weight: 500;
-      text-decoration: none;
-      position: absolute;
-      left: 50%;
-      bottom: 12px;
-      transform: translateX(-50%);
-      width: 80%;
-      border: 1px solid #ffc107;
-      transition: background 0.2s, color 0.2s;
-    }
-
-    .btn-below:hover {
-      background: rgba(0, 0, 0, 0.8);
-    }
-
-    .tips-box {
-      background: #e3f7f7;
-      padding: 18px 20px;
-      border-radius: 10px;
-      margin-bottom: 2rem;
-      font-size: 1.07rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-    }
-    .footer {
-      background-color: #222;
-      color: white;
-      text-align: center;
-      padding: 22px 10px 16px 10px;
-      position: relative;
-      margin-top: 2rem;
-      font-size: 1rem;
-    }
-    .back-to-top {
-      position: absolute;
-      right: 18px;
-      top: 18px;
-      font-weight: 600;
-    }
-    .back-to-top:hover {
-      color: #fff;
-      text-decoration: underline;
-    }
-    .navbar-brand {
-      color: rgb(0, 140, 255);
-    }
-    .btn-outline-warning.btn-below:hover,
-    .btn-outline-warning.btn-below:focus {
-      background-color: #ffc107 !important;
-      color: #fff !important;
-      border-color: #ffc107 !important;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="css/drink.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
@@ -194,7 +22,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="Sosis.html">Wurst</a></li>
               <li><a class="dropdown-item" href="Schnitzel.html">Schnitzel</a></li>
-              <li><a class="dropdown-item" href="#">Brot</a></li>
+              <li><a class="dropdown-item" href="brot.html">Brot</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
@@ -229,19 +57,19 @@
     <div class="gallery">
       <div class="gallery-item">
         <img src="img/Apfelschorle.jpg" alt="Apfelschorle">
-        <a href="MenuBeer.html#Apfelschorle" class="btn btn-outline-warning btn-below">Explore</a>
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="menudrink.html#Apfelschorle">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Beer.jpg" alt="Beer.jpg">
-        <a href="MenuBeer.html#Beer" class="btn btn-outline-warning btn-below">Explore</a>
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="menudrink.html#Beer">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Radler.jpg" alt="Radler">
-        <a href="MenuBeer.html#Radler" class="btn btn-outline-warning btn-below">Explore</a>
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="menudrink.html#Radler">Explore</a>
       </div>
       <div class="gallery-item">
         <img src="img/Spezi.jpg" alt="Spezi">
-        <a href="MenuBeer.html#Spezi" class="btn btn-outline-warning btn-below">Explore</a>
+        <a href="#" class="btn btn-outline-warning btn-below" data-target="menudrink.html#Spezi">Explore</a>
       </div>
     </div>
 
@@ -257,18 +85,7 @@
   <div class="footer">
     <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    // Highlight gallery-item on click with warning color
-    document.querySelectorAll('.gallery-item').forEach(function(item) {
-      item.addEventListener('click', function() {
-        item.style.boxShadow = '0 0 0 4px #ffc107, 0 4px 18px rgba(0,0,0,0.15)';
-        setTimeout(function() {
-          item.style.boxShadow = '';
-        }, 500);
-      });
-    });
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/drink.js"></script>
 </body>
 </html>
