--- a/fact.html
+++ b/fact.html
@@ -5,143 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fakta Unik Kuliner Jerman</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-      margin: 0;
-      padding: 0;
-    }
-    .fact-hero {
-      width: 100%;
-      max-height: 350px;
-      object-fit: cover;
-      border-radius: 0 0 1.5rem 1.5rem;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
-      margin-bottom: 2rem;
-    }
-    .fact-section {
-      padding: 2.5rem 0 1.5rem 0;
-    }
-    .fact-card {
-      background: #fff;
-      border-radius: 1rem;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-      overflow: hidden;
-      margin-bottom: 2rem;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: stretch;
-      transition: transform 0.2s;
-    }
-    .fact-card:hover {
-      transform: translateY(-6px) scale(1.02);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.13);
-    }
-    .fact-img {
-      width: 100%;
-      max-width: 260px;
-      object-fit: cover;
-      height: 220px;
-      border-radius: 1rem 0 0 1rem;
-      flex-shrink: 0;
-    }
-    .fact-card-body {
-      padding: 1.5rem 1.5rem 1.5rem 1rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      flex: 1;
-    }
-    .fact-title {
-      font-size: 1.35rem;
-      font-weight: 700;
-      color: #2c3e50;
-      margin-bottom: 0.5rem;
-    }
-    .fact-desc {
-      font-size: 1.08rem;
-      color: #444;
-      margin-bottom: 0;
-    }
-    @media (max-width: 767px) {
-      .fact-card {
-        flex-direction: column;
-        align-items: center;
-      }
-      .fact-img {
-        border-radius: 1rem 1rem 0 0;
-        width: 100%;
-        max-width: 100%;
-        height: 180px;
-      }
-      .fact-card-body {
-        padding: 1rem;
-      }
-    }
-    .fun-fact-box {
-      background: #fffbe7;
-      border-left: 6px solid #ffc107;
-      border-radius: 0.7rem;
-      padding: 1.2rem 1.5rem;
-      margin: 2.5rem 0 2rem 0;
-      font-style: italic;
-      font-size: 1.08rem;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-    }
-    .footer {
-      background-color: #222;
-      color: white;
-      text-align: center;
-      padding: 22px 10px 16px 10px;
-      position: relative;
-      margin-top: 2rem;
-      font-size: 1rem;
-    }
-    .back-to-top {
-      position: absolute;
-      right: 18px;
-      top: 18px;
-      font-weight: 600;
-    }
-    .back-to-top:hover {
-      color: #fff;
-      text-decoration: underline;
-    }
-    .navbar-brand {
-      color: rgb(0, 140, 255);
-    }
-    .navbar {
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-      color: #fff;
-      font-weight: 500;
-      letter-spacing: 1px;
-    }
-    .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.15);
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-      display: block;
-      margin-top: 0;
-    }
-    .dropdown-menu {
-      display: none;
-      transition: all 0.3s ease-in-out;
-      background-color: rgba(0, 0, 0, 0.5);
-      border: none;
-    }
-    .dropdown-item {
-      color: white;
-    }
-    .dropdown-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="css/fact.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
@@ -158,7 +22,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
               <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
-              <li><a class="dropdown-item" href="#">Brot</a></li>
+              <li><a class="dropdown-item" href="brot.html">Brot</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
@@ -213,10 +77,9 @@
   </section>
 
   <div class="footer">
-    <a href="#" class="back-to-top">↑ Back to top</a>
     <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
