--- a/home.html
+++ b/home.html
@@ -5,315 +5,176 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-    <style>
-    body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: linear-gradient(135deg, #f8fafc 60%, #e0e7ef 100%);
-      margin: 0;
-      padding: 0;
-    }
-    .navbar {
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-    .nav-link, .navbar-brand {
-      color: #fff;
-      font-weight: 500;
-      letter-spacing: 1px;
-    }
-    .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.15);
-      border-radius: 5px;
-      transition: 0.3s;
-    }
-    .nav-item.dropdown:hover .dropdown-menu {
-      display: block;
-      margin-top: 0;
-    }
-    .dropdown-menu {
-      display: none;
-      transition: all 0.3s ease-in-out;
-      background-color: rgba(0, 0, 0, 0.5);
-      border: none;
-    }
-    .dropdown-item {
-      color: white;
-    }
-    .dropdown-item:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      color: white;
-    }
-    .carousel-item img {
-        height: 100vh;
-        object-fit: cover;
-    }
-    .carousel {
-        z-index: 5;
-        top: 0;
-    }
-    .carousel-item {
-        height: 450px;
-        background-color: black;
-    }
-    .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-        filter: invert(100%);
-    }
-    .carousel-indicators [data-bs-target] {
-        background-color: white;
-    }
-    .card-img-top {
-        position: absolute;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        object-fit: cover;
-        z-index: 0;
-        border-radius: 0.5rem;
-        display: block;
-    }
-    .carousel-caption {
-        color: white;
-        background-color: rgba(0,0,0,0.5); /* Only the background is transparent */
-        margin: 0;
-        z-index: 5;
-        opacity: 1;
-        border-radius: 0.5rem;
-    }
-    .post-card {
-        box-shadow: 0 8px 32px rgba(0,0,0,0.25);
-        transition: 0.3s ease;
-        background: #fff;
-        border-radius: 0.5rem;
-        overflow: hidden;
-        position: relative;
-        min-height: 430px;
-        height: 500px;
-    }
-    .post-card .d-block {
-        opacity: 0.7;
-    }
-    .card-overlay {
-        position: absolute;
-        left: 0; bottom: 0;
-        width: 100%; height: 30%;
-        background: rgba(0, 0, 0, 0.4);
-        z-index: 1;
-    }
-    .card-body {
-        position: absolute;
-        left: 0; bottom: 0;
-        width: 100%;
-        z-index: 2;
-        color: #fff;
-        background: transparent;
-        padding: 1rem;
-    }
-    .post-card:hover {
-        opacity: 0.85;
-        transition: opacity 0.3s;
-    }
-    .footer {
-        background-color: #222;
-        color: white;
-        text-align: center;
-        padding: 22px 10px 16px 10px;
-        position: relative;
-        margin-top: 2rem;
-        font-size: 1rem;
-    }
-    .back-to-top {
-        position: absolute;
-        right: 18px;
-        top: 18px;
-        font-weight: 600;
-    }
-    .back-to-top:hover {
-        color: #fff;
-        text-decoration: underline;
-    }
-    </style>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
-    <div class="container-fluid px-4">
-      <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
-              <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
-              <li><a class="dropdown-item" href="#">Brot</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
-          <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-    <div id="imgCarousel" class="carousel carousel-light slide" data-bs-ride="carousel">
-        <div id="demo" class="carousel slide " data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-                <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        <div class="container-fluid px-4">
+            <a class="navbar-brand fw-bold text-warning" href="home.html">gutes Essen</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Food</a>
+                        <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="sosis.html">Wurst</a></li>
+                        <li><a class="dropdown-item" href="schnitzel.html">Schnitzel</a></li>
+                        <li><a class="dropdown-item" href="brot.html">Brot</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="drink.html">Drink</a></li>
+                    <li class="nav-item"><a class="nav-link" href="fact.html">Fact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                </ul>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/Sosis.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption">
-                        <h5>Weisswurst</h5>
-                        <p>Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/schnitzel.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption">
-                        <h5>Beef Schnitzel</h5>
-                        <p>Renyah diluar, lembut dan juicy didalam.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Currywurst.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption">
-                        <h5>Currywurst</h5>
-                        <p>Street food favorit, disajikan dengan saus kari tomat pedas.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Radler.jpg" class="d-block" style="width:100%">
-                    <div class="carousel-caption">
-                        <h5>Radler</h5>
-                        <p>Rasakan Musim Panas di setiap gelasnya.</p>
-                    </div>
+        </div>
+    </nav>
+
+    <div id="demo" class="carousel slide carousel-light" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/Sosis.jpg" class="d-block" style="width:100%">
+                <div class="carousel-caption">
+                    <h5>Weisswurst</h5>
+                    <p>Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</p>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
+            <div class="carousel-item">
+                <img src="img/schnitzel.jpg" class="d-block" style="width:100%">
+                <div class="carousel-caption">
+                    <h5>Beef Schnitzel</h5>
+                    <p>Renyah diluar, lembut dan juicy didalam.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/Currywurst.jpg" class="d-block" style="width:100%">
+                <div class="carousel-caption">
+                    <h5>Currywurst</h5>
+                    <p>Street food favorit, disajikan dengan saus kari tomat pedas.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/Radler.jpg" class="d-block" style="width:100%">
+                <div class="carousel-caption">
+                    <h5>Radler</h5>
+                    <p>Rasakan Musim Panas di setiap gelasnya.</p>
+                </div>
+            </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
     </div>
 
-<section class="py-5">
-    <div class="container">
-        <div class="row g-4">
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Bockwurst.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Bockwurst</h5>
-            <p class="card-text">Sosis rebus yang lembut, sering disantap bersama roti dan bir.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <section class="py-5">
+        <div class="container">
+            <div class="row g-4">
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Bockwurst.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Bockwurst</h5>
+                <p class="card-text">Sosis rebus yang lembut, sering disantap bersama roti dan bir.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menusosis.html#bockwurst">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Bratwurst.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Bratwurst </h5>
-            <p class="card-text">Sosis panggang khas Nürnberg, gurih dan juicy.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Bratwurst.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Bratwurst </h5>
+                <p class="card-text">Sosis panggang khas Nürnberg, gurih dan juicy.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menusosis.html#bratwurst">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Currywurst.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Currywurst</h5>
-            <p class="card-text">Street food favorit, disajikan dengan saus kari tomat pedas.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Currywurst.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Currywurst</h5>
+                <p class="card-text">Street food favorit, disajikan dengan saus kari tomat pedas.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menusosis.html#currywurst">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/schnitzel.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Beef Schnitzel</h5>
-            <p class="card-text">Renyah diluar, lembut dan juicy didalam.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/schnitzel.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Beef Schnitzel</h5>
+                <p class="card-text">Renyah diluar, lembut dan juicy didalam.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menuschnitzel.html#beefschnitzel">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Sosis.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Weisswurst</h5>
-            <p class="card-text">Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Sosis.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Weisswurst</h5>
+                <p class="card-text">Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menusosis.html#weisswurst">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Spezi.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Spezi</h5>
-            <p class="card-text">Dimana soda bertemu dengan asam citrus.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Spezi.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Spezi</h5>
+                <p class="card-text">Dimana soda bertemu dengan asam citrus.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menudrink.html#Spezi">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Apfelschorle.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Apfelschorle</h5>
-            <p class="card-text">Terasa seperti menggigit Apel Dingin di hari yang panas.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Apfelschorle.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Apfelschorle</h5>
+                <p class="card-text">Terasa seperti menggigit Apel Dingin di hari yang panas.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menudrink.html#Apfelschorle">Read More</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-6">
-    <div class="card post-card">
-        <img src="img/Beer.jpg" class="card-img-top" alt="Post">
-        <div class="card-overlay"></div>
-        <div class="card-body">
-            <h5 class="card-title">Beer</h5>
-            <p class="card-text">Kesegaran  di setiap tegukan.</p>
-            <a href="#" class="btn btn-outline-warning">Read More</a>
+    <div class="col-md-6">
+        <div class="card post-card">
+            <img src="img/Beer.jpg" class="card-img-top" alt="Post">
+            <div class="card-overlay"></div>
+            <div class="card-body">
+                <h5 class="card-title">Beer</h5>
+                <p class="card-text">Kesegaran  di setiap tegukan.</p>
+                <a href="#" class="btn btn-outline-warning" data-target="menudrink.html#Beer">Read More</a>
+            </div>
         </div>
     </div>
-</div>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
     <div class="footer">
-        <a href="#" class="back-to-top">↑ Back to top</a>
         <p>Copyright by ©gutes Essen 2025. All rights reserved.</p>
     </div>
-    <script>
-  // Highlight post-card on click with warning color
-  document.querySelectorAll('.post-card').forEach(function(card) {
-    card.addEventListener('click', function() {
-      card.style.boxShadow = '0 0 0 4px #ffc107, 0 8px 32px rgba(0,0,0,0.25)'; // #ffc107 is Bootstrap warning color
-      setTimeout(function() {
-        card.style.boxShadow = '';
-      }, 500);
-    });
-  });
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
